# Artwalk

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
Backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
Backend/App/: main.py
Backend/App/artwalk_crew/: crew.py
Backend/App/artwalk_crew/config/: agents.yaml
Backend/App/artwalk_crew/tools/: audio_guide_tool.py
Backend/App/classify_image/: README.md  pyproject.toml  report.md
Backend/App/classify_image/src/classify_image/: crew.py  main.py
Backend/App/classify_image/src/classify_image/config/: agents.yaml  tasks.yaml
Backend/App/classify_image/src/classify_image/tools/: llava_tool.py
Backend/App/data/: munich_example_with_image_url.json
Backend/App/detail_agent/: README.md  final_art_report.md  pyproject.toml
Backend/App/detail_agent/src/detail_agent/: crew.py  main.py
Backend/App/detail_agent/src/detail_agent/config/: agents.yaml  tasks.yaml
Backend/App/route_planner/classify_art/: utils.py
Backend/App/route_planner/src/route_planner/: planner_crew.py  route_agent.py  style_classifier.py  utils.py
Backend/App/storyaudio/: README.md  pyproject.toml
Backend/App/storyaudio/src/storyaudio/: crew.py  main.py
Backend/App/storyaudio/src/storyaudio/config/: agents.yaml  tasks.yaml
Backend/App/storyaudio/src/storyaudio/tools/: audio_generator.py
Backend/agents/classify_art/: utils.py
Backend/agents/route_planner/: planner_crew.py  route_agent.py
Backend/crewai-advanced-example/tools/: calculator_tools.py  search_tools.py  sec_tools.py
Backend/data/: districts.json  munich_classified.json
Backend/simple-example-ollama/: MarkdownTools.py  main.py
Frontend/: .gitignore  package-lock.json  package.json
Frontend/artwalk-app/: .env.example  app.json  babel.config.js  env.d.ts  index.tsx  package-lock 2.json  package-lock.json  package.json  tsconfig.json
Frontend/artwalk-app/app/: _layout.tsx  audio-loading.tsx  audio-player.tsx  details.tsx  index.tsx
Frontend/artwalk-app/app/(tabs)/: _layout.tsx  index.tsx  route.tsx  saved.tsx  scanner.tsx
Frontend/artwalk-app/app/route/: _layout.tsx  results.tsx  styles.tsx
Frontend/artwalk-app/components/: AudioGuideButton.tsx  AudioOverview.tsx  AudioPlayer.tsx  DeleteArtwork.tsx  DetailAnalysisView.tsx  DetailAnaysisView.tsx  LocationBottomSheet.tsx  LocationMarker.tsx  Mapcompnent.tsx  routeform.tsx  routeresult.tsx  saveArtwork.tsx  savedArtworkItem.tsx  savedArtworkTabs.tsx
Frontend/artwalk-app/context/: SavedLocationsContext.tsx
Frontend/artwalk-app/hooks/: useAudioGuide.tsx  useExhibitionData.tsx  useLiveLocation.tsx  useLocation.tsx  useRouteForm.tsx  useSavedArtwork.tsx  useUserLocation.tsx
Frontend/artwalk-app/services/: artworkService.tsx
shared-data/: story_output.json
tts_service/: Dockerfile  app.py  pyproject.toml  requirements.txt
