[tool.poetry]
name = "artwalk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "crewai (>=0.126.0,<0.127.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]
packages = [{ include = "artwalk_crew" }]

[tool.poetry.dependencies]
tts = "^0.22.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
