[tool.poetry]
name = "artwalk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "artwalk_crew" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = { extras = ["standard"], version = ">=0.34.2,<0.35.0" }
python-multipart = ">=0.0.20,<0.0.21"
crewai = ">=0.126.0,<0.127.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
