[tool.poetry]
name = "artwalk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "artwalk_crew" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = { extras = ["standard"], version = ">=0.34.0,<0.35.0" }
python-multipart = ">=0.0.20,<0.0.21"
crewai = "^0.130.0"


# LangChain + Ollama
langchain-community = ">=0.3.25,<0.4.0"
langchain-ollama = ">=0.3.3,<0.4.0"
ollama = ">=0.4.8,<1.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
