[project]
name = "classify_image"
version = "0.1.0"
description = "classify_image using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
classify_image = "classify_image.main:run"
run_crew = "classify_image.main:run"
train = "classify_image.main:train"
replay = "classify_image.main:replay"
test = "classify_image.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
