[tool.poetry]
name = "classify_image"
version = "0.1.0"
description = "classify_image using crewAI"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "classify_image", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
crewai = { extras = ["tools"], version = ">=0.121.1,<1.0.0" }
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
python-multipart = "^0.0.6"

[tool.poetry.scripts]
classify_image = "classify_image.main:run"
run_crew = "classify_image.main:run"
train = "classify_image.main:train"
replay = "classify_image.main:replay"
test = "classify_image.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
