[project]
name = "detail_agent"
version = "0.1.0"
description = "detail_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
detail_agent = "detail_agent.main:run"
run_crew = "detail_agent.main:run"
train = "detail_agent.main:train"
replay = "detail_agent.main:replay"
test = "detail_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
