[project]
name = "storyaudio"
version = "0.1.0"
description = "StoryAudio using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
storyaudio = "storyaudio.main:run"
run_crew = "storyaudio.main:run"
train = "storyaudio.main:train"
replay = "storyaudio.main:replay"
test = "storyaudio.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
